--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "typescript": "^4.6.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/country-list": "^2.1.1"
   },
   "overrides": {
     "react": "18.0.0"
